<resources>
    <string name="app_name">JustPass</string>
    <string name="action_logout">Logout</string>
    <string name="login_title">Sign in or sign up!</string>
    <string name="username_text">User:</string>
    <string name="usernameInput_hint">username</string>
    <string name="password_text">Pass:</string>
    <string name="passwordInput_hint">password</string>
    <string name="rememberCheck_text">Ich will remember dich</string>
    <string name="genders_male">male</string>
    <string name="genders_female">female</string>
    <string name="genders_unknown">alien</string>
    <string name="loginBtn_text">Login</string>
    <string name="registerBtn_text">Register</string>
    <string name="Login_page_title">Log in Student System</string>
    <string name="Username_hint">Username</string>
    <string name="Password_hint">Password</string>
    <string name="Login_btn_text">Login</string>
    <string name="Reg_form_title">Registration Form</string>
    <string name="Repeat_password">Repeat Password</string>
    <string name="Email_hint">Email</string>
    <string name="Login_reg_button">Not registered yet?</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="checkboxText">Remember Me</string>
    <string name="autoLog">isChecked</string>
    <string name="drawer_main_page_title">Main Page</string>
    <string name="drawer_courses_title">Courses</string>
    <string name="drawer_course_title">Current course</string>
    <string name="drawer_add_course_title">Add course</string>
    <string name="drawer_profile_title">Profile</string>
    <string name="drawer_logout_title">Log Out</string>
    <string name="drawer_exit_section">Exit</string>
    <string name="drawer_info_section">Info</string>
    <string name="drawer_about_title">About</string>
    <string name="lorem_ipsum_text">Lorem Ipsum е елементарен примерен текст, използван в печатарската и типографската индустрия. Lorem Ipsum е индустриален стандарт от около 1500 година, когато неизвестен печатар взема няколко печатарски букви и ги разбърква, за да напечата с тях книга с примерни шрифтове. Този начин не само е оцелял повече от 5 века, но е навлязъл и в публикуването на електронни издания като е запазен почти без промяна. Популяризиран е през 60те години на 20ти век със издаването на Letraset листи, съдържащи Lorem Ipsum пасажи, популярен е и в наши дни във софтуер за печатни издания като Aldus PageMaker, който включва различни версии на Lorem Ipsum.</string>
</resources>
